# bdo-market-insights

./: .cfnlintrc.yaml  .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  CONSOLIDATION_SUMMARY.md  LICENSE  Makefile  README.md  REORGANIZATION_COMPLETE.md  iam-policy-template.json  log.md  pyproject.toml  pytest.ini  requirements-dev.txt  samconfig.toml  template.yaml
.github/workflows/: CI_CD_SUMMARY.md  README.md  ci-cd.yml  ci.yml  deploy.yml  pr-validation.yml
.kiro/steering/: product.md  structure.md  tech.md
analyzeData/: lambda_function.py
archive/: FINAL_CHECKPOINT_SUMMARY.md  REORGANIZATION_QUICK_GUIDE.md  REPOSITORY_REORGANIZATION_PLAN.md
cleanData/: lambda_function.py
config/: README.md
docs/: CHANGELOG.md  PRODUCTION_DEPLOYMENT_GUIDE.md  STAGING_VALIDATION_GUIDE.md  arch.drawio  architecture.md  cleanup-tasks.md  runbook.md  slo.md
docs/adr/: 0001-aws-sam-over-cdk.md  0002-rds-proxy-opt-in.md  0003-single-shared-lambda-layer.md  0004-step-functions-etl.md  0005-api-key-usage-plan.md  0006-mixed-vpc-placement-no-nat.md  0007-aws-lambda-powertools.md  0008-iam-database-authentication.md  0009-eice-bastion.md  0010-lazy-item-population.md  0011-single-az-workload.md  0012-pricing-model-registry.md  0013-api-custom-domain.md  0014-openapi-docs-lambda.md  0015-llm-bedrock-out-of-vpc.md  0016-deterministic-digest-llm-narration.md  (+2 more)
fetchData/: lambda_function.py
img/: README.md
infra/: api.yaml  bastion.yaml  catalog.yaml  data.yaml  etl.yaml  icons.yaml  insights.yaml  network.yaml  observability.yaml  openapi.yaml
infrastructure/: ALARM_QUICK_REFERENCE.md  API_DOCUMENTATION_README.md  API_DOCUMENTATION_SUMMARY.md  CLOUDWATCH_ALARMS_README.md  DEPLOYMENT_CHECKLIST.md  IMPLEMENTATION_NOTES.md  README.md  RETENTION_SCHEDULE_README.md  RETENTION_SCHEDULE_SUMMARY.md  STAGING_DEPLOYMENT_CHECKLIST.md  STAGING_DEPLOYMENT_GUIDE.md  STAGING_DEPLOYMENT_README.md  STEP_FUNCTIONS_IMPLEMENTATION_NOTES.md  STEP_FUNCTIONS_README.md  api-gateway-template.yaml  cloudwatch-alarms-template.yaml  deploy-alarms.bat  deploy-alarms.sh  deploy-api-docs.bat  deploy-api-docs.sh  deploy-retention-schedule.bat  deploy-retention-schedule.sh  openapi-spec.yaml  retention-schedule-template.yaml  step-functions-state-machine.json  step-functions-template.yaml
lambda_layer/: README.md  XRAY_CONFIGURATION.md  requirements.txt
migrations/: alembic.ini  env.py  script.py.mako
postman/: bdo-market-insights.postman_collection.json
queryData/: lambda_function.py
retainData/: lambda_function.py  schema_migration.sql
retrieveIdList/: lambda_function.py
scripts/: README.md  VALIDATION_README.md  backfill_tracked_marker.py  deploy-all.sh  deploy-api-gateway.sh  deploy-function.sh  deploy-layer-windows.bat  deploy-layer.sh  deploy-production.bat  deploy-production.sh  deploy-staging.bat  deploy-staging.sh  deploy-step-functions.sh  export_openapi.py  export_postman.py  monitor-production.sh  notify-deployment.sh  rollback-function.sh  rollback-production.sh  seed_catalog.py  seed_items.py  seed_market_dev.py  setup-api-gateway-logging.sh  setup-deployment-config.sh  setup-iam-roles.sh  validate-production.sh  validate-staging.bat  validate-staging.sh  validate_staging.py
storeData/: .env.example  lambda_function.py
testDatabaseConnection/: .env.example
tests/: conftest.py  hypothesis_settings.py  test_placeholder.py
(+146 files in other folders)
