[project]
name = "bdo-market-insights"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3,<4",
    "pydantic>=2,<3",
    "psycopg[binary]>=3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "moto[all]",
    "boto3",
    "boto3-stubs",
    "pip-audit",
    "bandit",
]

[tool.hatch.build.targets.wheel]
packages = ["src/layer/python/bdo_common"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src/layer/python"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/layer/python"]

[tool.bandit]
# bandit looks for security issues; exclude tests/ since fixtures
# and assertions tend to false-positive on hardcoded data.
exclude_dirs = ["tests", ".venv", ".aws-sam"]
