[project]
name = "bdo-market-insights"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aws-lambda-powertools>=3,<4",
    "pydantic>=2,<3",
    "psycopg[binary]>=3,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "pytest",
    "pytest-mock",
    "moto[all]",
    "boto3",
    "boto3-stubs",
    "pip-audit",
    "bandit",
    "alembic",
    "sqlalchemy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/layer/python/bdo_common"]

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src/layer/python"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Lambda handlers all share the file name app.py with no __init__.py (one
# entry point per src/functions/<name>/). explicit_package_bases + mypy_path
# give each a unique module name (<name>.app) and resolve the shared layer.
explicit_package_bases = true
mypy_path = ["src/layer/python", "src/functions"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/layer/python"]
markers = [
    "integration: end-to-end tests that require a real Postgres (set TEST_DATABASE_URL; skipped otherwise)",
]

[tool.bandit]
# bandit looks for security issues; exclude tests/ since fixtures
# and assertions tend to false-positive on hardcoded data.
exclude_dirs = ["tests", ".venv", ".aws-sam"]
